# easrecorder

./: .gitignore  README.md  easrecorder.py  package-lock.json  package.json  pyproject.toml
src/easrecorder/: cli.py
